--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /node_modules
 /public/hot
-/public/upload
+/public/upload/images
+/public/upload/slide
+/public/upload/dethi
 /public/storage
 /storage/*.key
 /vendor
