--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/upload/images
 /public/upload/slide
 /public/upload/dethi
+/public/upload/.ckfinder
 /public/storage
 /storage/*.key
 /vendor
