--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~4.0",
         "goodnesskay/laravelpdfviewer": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jorenvanhocht/laravel-share": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0"
     },
